--- a/schedule.Rmd
+++ b/schedule.Rmd
@@ -136,8 +136,8 @@ Lecture slides:
 Assignment 3: 
 
 - Due: November 7, 11:59pm
-<!-- - [html file](./assignments/assignment03.html) -->
-<!-- - [cont.csv dataset](./data/cont.csv) -->
+- [html file](./assignments/assignment03.html)
+- [cont.csv dataset](./data/cont.csv)
 
 
 ## Unit 4
