--- a/schedule.Rmd
+++ b/schedule.Rmd
@@ -135,7 +135,7 @@ Lecture slides:
 
 Assignment 3: 
 
-- Due: November 7, 11:59pm
+- Due: November 9, 9:00am
 - [html file](./assignments/assignment03.html)
 - [cont.csv dataset](./data/cont.csv)
 
