--- a/slides/EDUC641_10_inference.Rmd
+++ b/slides/EDUC641_10_inference.Rmd
@@ -1264,6 +1264,9 @@ class: middle, inverse
 ### Reading
 - LSWR Chapter 10: inference and CLT
 
+### Quiz
+- Nov. 8 (due 5pm Nov. 9)
+
 ### Assignment
-- Assignment #3 Due Nov. 7, 11:59pm
+- Assignment #3 Due Nov. 9, 9:00am
 
