--- a/schedule.Rmd
+++ b/schedule.Rmd
@@ -164,7 +164,7 @@ Lecture slides:
 
 - Class 13 (11/8) slides: [html](./slides/EDUC641_14_continuousrel.html) | [pdf](./slides/EDUC641_14_continuousrel.pdf)
 - Class 14 (11/10) slides: [html](./slides/EDUC641_15_regression.html) | [pdf](./slides/EDUC641_15_regression.pdf)
-- Class 15-16 slides (11/15 & 11/22)
+- Class 15-16 slides (11/15 & 11/22): [html](./slides/EDUC641_16_residuals.html) | [pdf](./slides/EDUC641_16_residuals.pdf)
   + **No class on 11/17 (David traveling for conference) and 11/24 (university holiday)**
 
 - Data:  [life_expectancy.csv](./data/life_expectancy.csv)
