--- a/slides/EDUC641_16_residuals.Rmd
+++ b/slides/EDUC641_16_residuals.Rmd
@@ -16,7 +16,7 @@ output:
 
 ```{R, setup, include = F}
 library(pacman)
-p_load(here, tidyverse, xaringan, knitr, kableExtra, xaringanthemer, faux)
+p_load(here, tidyverse, xaringan, knitr, kableExtra, xaringanthemer, modelsummary)
 
 i_am("slides/EDUC641_16_residuals.rmd")
 
@@ -277,7 +277,11 @@ $$
 
 --
 
-Slopes can be positive (as in this case) or negative. Here, we conclude that countries that experience one additional year of schooling have an average life expectancy of 2.23 more years.
+Slopes can be positive (as in this case) or negative. Here, we conclude that countries where children, on average, experience one additional year of schooling have an average life expectancy of 2.23 more years.
+
+--
+
+We do **NOT** say that increasing the average years that children attend school by one year increases average life expectancy in that country by 2.23 years. .blue[**Why?**]
 
 
 ---
@@ -308,12 +312,12 @@ As with our categorical and single-variable continuous data analysis, we can ask
 
 Could we have gotten a slope value of 2.23 by sampling from a population in which there was **no relationship** between $LIFE\_EXPECTANCY$ and $SCHOOLING$?
 
-- In other words, by sampling from a *null population* in which the slope was zero?
+- In other words, by sampling from a *null population* in which the slope of the relationship between $LIFE\_EXPECTANCY$ and $SCHOOLING$ was zero?
 
 ---
 # Regression inference
 
-Could we have gotten a slope value of 2.23 by sampling from a population in which there was **no relationship** between $LIFE\_EXPECTANCY$ and $SCHOOLING$?
+What is the probability that we would have gotten a slope value of 2.23 by sampling from a population in which there was **no relationship** between $LIFE\_EXPECTANCY$ and $SCHOOLING$?
 
 ```{r, echo=F, highlight.output = c(3:6), output.lines = -(1:7)}
 summary(fit)
@@ -352,6 +356,69 @@ ggplot(who, aes(x = schooling, y = life_expectancy)) +
 > **The story so far** <br> .small[In our investigation of country-level aggregate measures of schooling and life expectancy, we have found that the average years of schooling in a country is related to the average life expectancy. In particular, when we relate the country-level life expectancy (*LIFE_EXPECTANCY*) to the country-level mean years of schooling (*SCHOOLING*), we find that the trend-line estimated by ordinary-least-squares regression has a slope of 2.23 (*p*<0.0001). This suggests that two countries that differ in their average years of schooling attainment by 1 year will have, on average, a difference in life expectancy of 2.23 years. Of course, this relationship is far from causal...]
 
 ]
+
+---
+# Producing beautiful results
+
+### A descriptive table (Table 1):
+```{r, echo=F}
+who1 <- select(who, -c(predict, predict_c))
+```
+
+```{r, echo=T}
+library(modelsummary)
+datasummary_skim(who1)
+```
+
+---
+# Producing beautiful results
+
+### A descriptive table (Table 1):
+```{r, echo=T}
+datasummary_skim(who1, histogram=F)
+```
+
+---
+# Producing beautiful results
+### A descriptive table (Table 1):
+
+Saving it to a Word table:
+```{r, echo=T}
+datasummary_skim(who1, histogram=F,
+                 output="table.docx")
+```
+
+---
+# Producing beautiful results
+
+### A regression output table (Table 2)
+```{r, echo=T}
+modelsummary(fit)
+```
+
+---
+# Producing beautiful results
+
+### A regression output table (Table 2)
+```{r, echo=T}
+modelsummary(fit, stars=T,
+             gof_omit = "Adj.|AIC|BIC|RMSE",
+             coef_rename = c("schooling" = "Yrs. Schooling"))
+```
+
+---
+# Producing beautiful results
+
+### A regression output table (Table 2)
+
+Saving it to a Word table:
+```{r, echo=T}
+modelsummary(fit, stars=T,
+             gof_omit = "Adj.|AIC|BIC|RMSE",
+             coef_rename = c("schooling" = "Yrs. Schooling"),
+             output="table2.docx")
+```
+
 ---
 class: middle, inverse
 
@@ -489,14 +556,15 @@ A few outliers, but we seem to be doing ok...
 ---
 # Residual assumptions
 
-For the *p*-values that we computed in the regression analysis to be correct, the residuals **must be normally distributed**
+For the *p*-values that we computed in the regression analysis to be correct, the residuals **must be normally distributed**<sup>1</sup>
 
-```{r, echo=T, fig.height=4.5}
+```{r, echo=F, fig.height=4.5}
 ggplot(who, aes(x = resid)) + 
   geom_histogram(binwidth = 1) +
     theme_minimal(base_size = 16)
 ```
 
+.footnote[[1] We have solutions if they are not which we will learn about in 643. ]
 --
 Pretty good, pretty good...
 
@@ -587,7 +655,10 @@ class: middle, inverse
 # To Dos
 
 ### Reading
-LSWR Chapter 15.1 and 15.2: bivariate regression
+- LSWR Chapter 15.1 and 15.2: bivariate regression
 
 ### Assignments
-Assignment #4 Due November 28 at 11:59PM
+- Assignment #4 Due November 28 at 11:59PM
+- Quiz #5 on November 22/23 (due at 5pm)
+
+### No class on 11/17!
