--- a/assignments/assignment03.Rmd
+++ b/assignments/assignment03.Rmd
@@ -51,7 +51,7 @@ Details on all variables are as follows:
 
 #### 1. Dataset
 
-1.1. Open your RStudio, create a project and save it. Go to the root directory of the project and create folders named: "Code", "Data", "Figures" and "Tables." Download the [cont.csv dataset](./data/cont.csv) and store it in the folder "Data". Create an R script (or .Rmd) file in the Code folder. Read the data into your R environment. You do not need to include this part of the response in your memo; only in your code.
+1.1. Open your RStudio, create a project and save it. Go to the root directory of the project and create folders named: "Code", "Data", "Figures" and "Tables." Download the [cont.csv dataset](../data/cont.csv) and store it in the folder "Data". Create an R script (or .Rmd) file in the Code folder. Read the data into your R environment. You do not need to include this part of the response in your memo; only in your code.
 
 Review the codebook above and transform any variable into its correct type (format), as needed. **(1 point)**
 
