--- a/assignments/assignment04.Rmd
+++ b/assignments/assignment04.Rmd
@@ -52,7 +52,7 @@ Details on all variables are as follows:
 
 ### Assignment Details
 
-**Data preparation** *(same as Assignment 3)*: Open your RStudio, create a project and save it. Go to the root directory of the project and create folders named: "Code", "Data", "Figures" and "Tables." Download the [cont.csv dataset](./data/cont.csv) and store it in the folder "Data". Create an R script (or .Rmd) file in the Code folder. Read the data into your R environment. Transform variables, as needed. You do not need to include this part of the response in your memo; only in your code.
+**Data preparation** *(same as Assignment 3)*: Open your RStudio, create a project and save it. Go to the root directory of the project and create folders named: "Code", "Data", "Figures" and "Tables." Download the [cont.csv dataset](../data/cont.csv) and store it in the folder "Data". Create an R script (or .Rmd) file in the Code folder. Read the data into your R environment. Transform variables, as needed. You do not need to include this part of the response in your memo; only in your code.
 
 
 #### 1. Descriptive Statistics
